--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "get",
-	"description": "Get github users details and repos with simple CLI (WIP) ",
+	"description": "A useless CLI to get github users details ",
 	"version": "0.0.1",
 	"license": "UNLICENSED",
 	"bin": {
@@ -9,7 +9,7 @@
 	"author": {
 		"name": "wael-fadlallah",
 		"email": "wael.fudlallah@gmail.com",
-		"url": "waelfadlallah.com"
+		"url": "htpps://waelfadlallah.com"
 	},
 	"keywords": [
 		"get",
@@ -29,7 +29,8 @@
 		"cli-handle-unhandled": "^1.1.1",
 		"cli-meow-help": "^3.1.0",
 		"cli-welcome": "^2.2.2",
-		"meow": "^9.0.0"
+		"meow": "^9.0.0",
+		"table": "^6.8.1"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.0"
